--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.WeatherApp"
         tools:targetApi="31">
         <activity
+            android:name="com.weather.weatherapp.open_source_page"
+            android:exported="false" />
+        <activity
             android:name="com.weather.weatherapp.privacy_policy_page"
             android:exported="false" />
         <activity
@@ -35,7 +38,7 @@
         <activity
             android:name="com.weather.weatherapp.MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
